<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark"
    >


    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:textAppearance="@style/titles"
            android:text="@string/title_imc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="10dp"
            android:textAppearance="@style/strings"
            android:text="@string/about_imc"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about"
        android:layout_marginTop="-7dp"
        android:background="@drawable/borda_retangular_cantos_top"
        android:gravity="center_horizontal"
        android:padding="32dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:background="@drawable/border_button_male"
                android:text="@string/male"
                android:textAppearance="@style/strings"

                />

            <Button
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAppearance="@style/strings"
                android:background="@drawable/border_button_female"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_peso"
                android:layout_marginBottom="15dp"
                android:inputType="numberDecimal"
                />
            <EditText
                android:id="@+id/altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_altura"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <Button
            android:id="@+id/button_calc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_button"
            android:text="@string/button_calcular"
            android:textColor="@android:color/white"
            android:onClick="openResult"/>

    </LinearLayout>

</RelativeLayout>